force-app/main/default/objects/KimbleOne__ResourceAssignmentsPreference__c/KimbleOne__ResourceAssignmentsPreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Resource Assignments Preference</label>
</CustomObject>