force-app/main/default/objects/KimbleOne__ResourceAssignmentsPreference__c/fields/KimbleOne__AssignmentClassificationStylesheet__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentClassificationStylesheet__c</fullName>
    <label>Assignment Classification Stylesheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>