force-app/main/default/objects/KimbleOne__ResourceAssignmentsPreference__c/fields/KimbleOne__ShowAccountInSummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowAccountInSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Account In Summary</label>
    <type>Checkbox</type>
</CustomField>