force-app/main/default/objects/KimbleOne__ResourceAssignmentsPreference__c/fields/KimbleOne__ShowNonBusinessDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowNonBusinessDays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Non-Business Days</label>
    <type>Checkbox</type>
</CustomField>